[gd_scene load_steps=11 format=4 uid="uid://ckbmtvba0v7dd"]

[ext_resource type="Script" uid="uid://cqnsq2umaacjb" path="res://scripts/world.gd" id="1_4mrxx"]
[ext_resource type="Texture2D" uid="uid://yoiqfmgck58j" path="res://assets/spritesheet.png" id="2_7r4gi"]
[ext_resource type="PackedScene" uid="uid://bebqebccv5ikn" path="res://scenes/movement_overlay.tscn" id="3_w7kh3"]
[ext_resource type="Texture2D" uid="uid://brwvve36m171a" path="res://assets/mouse_highlight.png" id="4_e3hyu"]
[ext_resource type="PackedScene" uid="uid://bho3044tj0f56" path="res://scenes/unit_manager.tscn" id="5_q5onr"]
[ext_resource type="PackedScene" uid="uid://ip1nitsf3mjt" path="res://scenes/unit.tscn" id="6_jhx03"]
[ext_resource type="Resource" uid="uid://cul18uf0hffj5" path="res://resources/unit/stats/enemy.tres" id="7_o8fc1"]
[ext_resource type="PackedScene" uid="uid://dqds4ydcmksnq" path="res://scenes/cursor.tscn" id="8_xo05s"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f3sb7"]
texture = ExtResource("2_7r4gi")
texture_region_size = Vector2i(32, 32)
1:8/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
9:1/0 = 0
9:2/0 = 0
10:2/0 = 0
10:3/0 = 0
10:4/0 = 0
9:5/0 = 0
9:5/0/custom_data_0 = true
9:6/0 = 0
9:7/0 = 0
9:8/0 = 0
9:9/0 = 0
9:10/0 = 0
10:10/0 = 0
10:9/0 = 0
10:8/0 = 0
10:7/0 = 0
10:6/0 = 0
10:5/0 = 0
10:5/0/custom_data_0 = true
10:1/0 = 0
10:0/0 = 0
9:0/0 = 0
6:0/0 = 0
5:0/0 = 0
4:0/0 = 0
3:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0
0:5/0/custom_data_0 = true
0:6/0 = 0
0:6/0/custom_data_0 = true
0:7/0 = 0
0:8/0 = 0
0:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
8:9/0 = 0
8:8/0 = 0
8:7/0 = 0
8:6/0 = 0
8:5/0 = 0
8:4/0 = 0
9:3/0 = 0
8:3/0 = 0
8:2/0 = 0
7:1/0 = 0
2:1/0 = 0
1:1/0 = 0
1:2/0 = 0
1:3/0 = 0
1:4/0 = 0
1:5/0 = 0
1:5/0/custom_data_0 = true
1:6/0 = 0
2:6/0 = 0
2:7/0 = 0
2:8/0 = 0
2:9/0 = 0
1:9/0 = 0
2:5/0 = 0
2:5/0/custom_data_0 = true
2:4/0 = 0
2:3/0 = 0
3:3/0 = 0
3:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:9/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
3:9/0 = 0
1:7/0 = 0
3:8/0 = 0
3:7/0 = 0
3:6/0 = 0
3:5/0 = 0
3:5/0/custom_data_0 = true
3:4/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:4/0 = 0
7:6/0 = 0
7:7/0 = 0
7:8/0 = 0
4:7/0 = 0
5:8/0 = 0
4:8/0 = 0
6:7/0 = 0
5:7/0 = 0
6:8/0 = 0
6:6/0 = 0
6:6/0/custom_data_0 = true
6:5/0 = 0
5:6/0 = 0
4:6/0 = 0
5:5/0 = 0
5:5/0/custom_data_0 = true
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
4:5/0 = 0
4:5/0/custom_data_0 = true
7:5/0 = 0
7:4/0 = 0

[sub_resource type="TileSet" id="TileSet_fj7yv"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(32, 16)
custom_data_layer_0/name = "is_solid"
custom_data_layer_0/type = 1
sources/2 = SubResource("TileSetAtlasSource_f3sb7")

[node name="World" type="Node2D"]
script = ExtResource("1_4mrxx")

[node name="Map" type="Node2D" parent="."]
position = Vector2(16, 0)

[node name="GroundLayer" type="TileMapLayer" parent="Map"]
position = Vector2(-16, 0)
tile_map_data = PackedByteArray("AAAAAAAAAgAHAAMAAAAAAAEAAgAHAAMAAAABAAAAAgAHAAMAAAABAAEAAgAHAAMAAAABAAIAAgAHAAMAAAAAAAIAAgAHAAMAAAACAAIAAgAHAAMAAAACAAEAAgAHAAMAAAACAAAAAgAHAAMAAAAAAAMAAgAHAAMAAAABAAMAAgAHAAMAAAACAAMAAgAHAAMAAAADAAMAAgAHAAMAAAADAAIAAgAHAAMAAAADAAEAAgAHAAMAAAADAAAAAgAHAAMAAAAEAAAAAgAHAAMAAAAEAAEAAgAHAAMAAAAEAAIAAgAHAAMAAAAEAAMAAgAHAAMAAAAEAAQAAgAHAAMAAAADAAQAAgAHAAMAAAACAAQAAgAHAAMAAAABAAQAAgAHAAMAAAAAAAQAAgAHAAMAAAA=")
tile_set = SubResource("TileSet_fj7yv")

[node name="RockLayer" type="TileMapLayer" parent="Map"]
position = Vector2(-16, 0)
tile_map_data = PackedByteArray("AAADAAMAAgAAAAYAAAACAAMAAgAAAAYAAAACAAQAAgAAAAYAAAADAAQAAgAAAAYAAAA=")
tile_set = SubResource("TileSet_fj7yv")

[node name="MovementOverlay" parent="Map" instance=ExtResource("3_w7kh3")]
position = Vector2(-16, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(8, 48)

[node name="TurnIndicator" type="Label" parent="Camera2D"]
offset_left = -104.0
offset_top = -106.0
offset_right = -64.0
offset_bottom = -83.0

[node name="CoordinatesLabel" type="Label" parent="Camera2D"]
offset_left = -160.0
offset_top = -122.0
offset_right = -120.0
offset_bottom = -99.0
text = "0000"

[node name="mouse_highlight" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0.172549, 0.611765)
texture = ExtResource("4_e3hyu")

[node name="UnitManager" parent="." instance=ExtResource("5_q5onr")]

[node name="Player" type="Node2D" parent="UnitManager"]

[node name="Unit" parent="UnitManager/Player" instance=ExtResource("6_jhx03")]
position = Vector2(16, 8)

[node name="Unit2" parent="UnitManager/Player" instance=ExtResource("6_jhx03")]
position = Vector2(-32, 48)

[node name="Enemy" type="Node2D" parent="UnitManager"]

[node name="Unit2" parent="UnitManager/Enemy" instance=ExtResource("6_jhx03")]
position = Vector2(64, 32)
stats = ExtResource("7_o8fc1")

[node name="Cursor" parent="." instance=ExtResource("8_xo05s")]

[node name="EndTurn" type="Button" parent="."]
offset_left = -40.0
offset_top = 128.0
offset_right = 50.0
offset_bottom = 159.0
text = "END TURN"

[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
